--- a/core/connection/common/conn_common.gni
+++ b/core/connection/common/conn_common.gni
@@ -16,8 +16,11 @@ conn_common_src = [
   "$dsoftbus_root_path/core/connection/common/src/softbus_base_listener.c",
   "$dsoftbus_root_path/core/connection/common/src/softbus_tcp_socket.c",
   "$dsoftbus_root_path/core/connection/common/src/softbus_thread_pool.c",
+  "$dsoftbus_root_path/core/connection/common/src/softbus_datahead_transform.c",
 ]
 conn_common_inc = [
   "$dsoftbus_root_path/core/connection/interface",
   "$dsoftbus_root_path/core/connection/common/include",
+  "$dsoftbus_root_path/core/connection/manager",
+  "$dsoftbus_root_path/core/transmission/trans_channel/proxy/include",
 ]
