fix br send file issue
Signed-off-by: duxbbo <duxiaobo@huawei.com>
Change-Id: I805327141159e91342dc5b8d0bca495416320518

--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -50,17 +50,12 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/test.gni")
 
-  trans_sdk_proxy_test_src = [
-    "proxy/client_trans_proxy_file_common_test.cpp"
-  ]
+  trans_sdk_proxy_test_src = [ "proxy/client_trans_proxy_file_common_test.cpp" ]
 
-  trans_sdk_proxy_test_inc = [
-    "$dsoftbus_root_path/sdk/transmission/trans_channel/proxy/include"
-  ]
+  trans_sdk_proxy_test_inc =
+      [ "$dsoftbus_root_path/sdk/transmission/trans_channel/proxy/include" ]
 
-  trans_sdk_proxy_test_deps = [
-    "$dsoftbus_root_path/sdk:softbus_client"
-  ]
+  trans_sdk_proxy_test_deps = [ "$dsoftbus_root_path/sdk:softbus_client" ]
 
   module_output_path = "dsoftbus/transmission"
   ohos_unittest("TransSdkTest") {
