--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -2,15 +2,15 @@
     "jobs" : [{
             "name" : "post-fs-data",
             "cmds" : [
-                "mkdir /data/service/el1/public/dsoftbus 0771 system system"
+                "mkdir /data/service/el1/public/dsoftbus 0771 dsoftbus dsoftbus"
             ]
         }
     ],
     "services" : [{
             "name" : "softbus_server",
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
-            "uid" : "system",
-            "gid" : ["system", "shell"]
+            "uid" : "dsoftbus",
+            "gid" : ["dsoftbus", "system", "shell"]
         }
     ]
 }
