--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -14,13 +14,13 @@
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 NSTACKX_ROOT = "//foundation/communication/dsoftbus/components/nstackx"
-cflags = [ "-DENABLE_DFINDER_HILOG" ]
+cflags = [ "-DENABLE_USER_LOG" ]
 if (dsoftbus_feature_ifname_prefix) {
   cflags += [ "-DETH_DEV_NAME_PRE=\"br\"" ]
 }
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
-  if (ohos_kernel_type == "liteos_a") {
+  if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "liteos_m") {
     config("nstackx_util_header") {
       include_dirs = [
         "interface",
@@ -35,8 +35,8 @@ if (defined(ohos_lite)) {
       ]
     }
   }
-  shared_library("nstackx_util.open") {
-    if (ohos_kernel_type == "liteos_a") {
+  if (ohos_kernel_type == "liteos_m") {
+    static_library("nstackx_util.open") {
       cflags += [
         "-Wall",
         "-D_GNU_SOURCE",
@@ -44,6 +44,8 @@ if (defined(ohos_lite)) {
         "-DLWIP_DONT_PROVIDE_BYTEORDER_FUNCTIONS",
         "-DLWIP_LITEOS_A_COMPAT",
         "-DMBEDTLS_INCLUDED",
+        "-DNSTACKX_WITH_LITEOS_M",
+        "-DENABLE_USER_LOG",
       ]
       cflags_cc = cflags
       include_dirs = [
@@ -55,63 +57,100 @@ if (defined(ohos_lite)) {
         "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits/",
       ]
       sources = [
-        "core/nstackx_dev.c",
         "core/nstackx_event.c",
         "core/nstackx_log.c",
-        "core/nstackx_mbedtls.c",
-        "core/nstackx_socket.c",
         "core/nstackx_timer.c",
-        "core/nstackx_util.c",
-        "platform/liteos/sys_dev.c",
+      ]
+
+      sources += [
         "platform/liteos/sys_epoll.c",
         "platform/liteos/sys_event.c",
         "platform/liteos/sys_log.c",
-        "platform/liteos/sys_socket.c",
         "platform/liteos/sys_timer.c",
         "platform/liteos/sys_util.c",
       ]
-      deps = [
-        "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
-        "//third_party/mbedtls",
-      ]
-    } else if (ohos_kernel_type == "linux") {
-      cflags += [
-        "-Wall",
-        "-DNSTACKX_WITH_HMOS_LINUX",
-        "-DMBEDTLS_INCLUDED",
-      ]
-      cflags_cc = cflags
-      include_dirs = [
-        "include",
-        "interface",
-        "platform/unix",
-        "$NSTACKX_ROOT/nstackx_core/",
-        "//third_party/bounds_checking_function/include/",
-        "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits/",
-      ]
-      sources = [
-        "core/nstackx_dev.c",
-        "core/nstackx_event.c",
-        "core/nstackx_log.c",
-        "core/nstackx_mbedtls.c",
-        "core/nstackx_socket.c",
-        "core/nstackx_timer.c",
-        "core/nstackx_util.c",
-        "platform/unix/sys_dev.c",
-        "platform/unix/sys_epoll.c",
-        "platform/unix/sys_event.c",
-        "platform/unix/sys_log.c",
-        "platform/unix/sys_socket.c",
-        "platform/unix/sys_timer.c",
-        "platform/unix/sys_util.c",
-      ]
-      deps = [
-        "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
-        "//third_party/mbedtls",
-        "//third_party/mbedtls:mbedtls_shared",
-      ]
+
+      public_configs = [ ":nstackx_util_header" ]
     }
-    public_configs = [ ":nstackx_util_header" ]
+  } else {
+    shared_library("nstackx_util.open") {
+      if (ohos_kernel_type == "liteos_a") {
+        cflags += [
+          "-Wall",
+          "-D_GNU_SOURCE",
+          "-DNSTACKX_WITH_LITEOS",
+          "-DLWIP_DONT_PROVIDE_BYTEORDER_FUNCTIONS",
+          "-DLWIP_LITEOS_A_COMPAT",
+          "-DMBEDTLS_INCLUDED",
+        ]
+        cflags_cc = cflags
+        include_dirs = [
+          "include",
+          "interface",
+          "platform/liteos",
+          "$NSTACKX_ROOT/nstackx_core/",
+          "//third_party/bounds_checking_function/include/",
+          "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits/",
+        ]
+        sources = [
+          "core/nstackx_dev.c",
+          "core/nstackx_event.c",
+          "core/nstackx_log.c",
+          "core/nstackx_mbedtls.c",
+          "core/nstackx_socket.c",
+          "core/nstackx_timer.c",
+          "core/nstackx_util.c",
+          "platform/liteos/sys_dev.c",
+          "platform/liteos/sys_epoll.c",
+          "platform/liteos/sys_event.c",
+          "platform/liteos/sys_log.c",
+          "platform/liteos/sys_socket.c",
+          "platform/liteos/sys_timer.c",
+          "platform/liteos/sys_util.c",
+        ]
+        deps = [
+          "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
+          "//third_party/mbedtls",
+        ]
+      } else if (ohos_kernel_type == "linux") {
+        cflags += [
+          "-Wall",
+          "-DNSTACKX_WITH_HMOS_LINUX",
+          "-DMBEDTLS_INCLUDED",
+        ]
+        cflags_cc = cflags
+        include_dirs = [
+          "include",
+          "interface",
+          "platform/unix",
+          "$NSTACKX_ROOT/nstackx_core/",
+          "//third_party/bounds_checking_function/include/",
+          "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits/",
+        ]
+        sources = [
+          "core/nstackx_dev.c",
+          "core/nstackx_event.c",
+          "core/nstackx_log.c",
+          "core/nstackx_mbedtls.c",
+          "core/nstackx_socket.c",
+          "core/nstackx_timer.c",
+          "core/nstackx_util.c",
+          "platform/unix/sys_dev.c",
+          "platform/unix/sys_epoll.c",
+          "platform/unix/sys_event.c",
+          "platform/unix/sys_log.c",
+          "platform/unix/sys_socket.c",
+          "platform/unix/sys_timer.c",
+          "platform/unix/sys_util.c",
+        ]
+        deps = [
+          "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
+          "//third_party/mbedtls",
+          "//third_party/mbedtls:mbedtls_shared",
+        ]
+      }
+      public_configs = [ ":nstackx_util_header" ]
+    }
   }
 } else {
   import("//build/ohos.gni")
@@ -128,6 +167,7 @@ if (defined(ohos_lite)) {
       "-Wall",
       "-DMBEDTLS_INCLUDED",
       "-DNSTACKX_WITH_HMOS_LINUX",
+      "-DENABLE_USER_LOG",
     ]
     cflags_cc = cflags
     include_dirs = [
