--- a/adapter/default_config/feature_config/small/config.gni
+++ b/adapter/default_config/feature_config/small/config.gni
@@ -38,4 +38,5 @@ declare_args() {
   dsoftbus_feature_ifname_prefix = false
 
   dsoftbus_feature_encrypt = 0
+  dsoftbus_standard_feature_dfinder_support_multi_nif = true
 }
