--- a/core/discovery/coap/disc_coap.gni
+++ b/core/discovery/coap/disc_coap.gni
@@ -33,9 +33,8 @@ disc_coap_deps = []
 
 if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
-    disc_coap_deps += [
-      "$dsoftbus_root_path/components/nstackx_mini/nstackx_ctrl:nstackx_ctrl",
-    ]
+    disc_coap_deps +=
+        [ "$dsoftbus_root_path/components/nstackx/nstackx_ctrl:nstackx_ctrl" ]
   } else {
     disc_coap_deps +=
         [ "$dsoftbus_root_path/components/nstackx/nstackx_ctrl:nstackx_ctrl" ]
