--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -13,6 +13,16 @@
 
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
+native_source_path = rebase_path("$dsoftbus_root_path")
+ble_enhanced_impl =
+    "dsoftbus_enhance/adapter/common/range/softbus_adapter_range.c"
+enhanced_range = exec_script("$dsoftbus_root_path/check_sub_module.py",
+                             [
+                               "$native_source_path",
+                               "$ble_enhanced_impl",
+                             ],
+                             "value")
+
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   if (ohos_kernel_type == "liteos_m") {
@@ -63,6 +73,14 @@ if (defined(ohos_lite)) {
       ]
 
       deps = [ "//base/hiviewdfx/hilog_lite/frameworks/mini:hilog_lite" ]
+
+      if (enhanced_range) {
+        sources += [ "$dsoftbus_root_path/dsoftbus_enhance/adapter/common/range/softbus_adapter_range.c" ]
+        deps += [ "//base/msdp/algorithm/ble_range:msdp_ble_range" ]
+      } else {
+        sources += [ "$softbus_adapter_common/range/softbus_adapter_range.c" ]
+      }
+
       if (dsoftbus_feature_encrypt == 0) {
         sources +=
             [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
@@ -101,6 +119,14 @@ if (defined(ohos_lite)) {
         "//base/startup/syspara_lite/frameworks/parameter/src:sysparam",
         "//third_party/bounds_checking_function:libsec_shared",
       ]
+
+      if (enhanced_range) {
+        sources += [ "$dsoftbus_root_path/dsoftbus_enhance/adapter/common/range/softbus_adapter_range.c" ]
+        deps += [ "//base/msdp/algorithm/ble_range:msdp_ble_range" ]
+      } else {
+        sources += [ "$softbus_adapter_common/range/softbus_adapter_range.c" ]
+      }
+
       if (dsoftbus_feature_encrypt == 0) {
         sources +=
             [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
@@ -147,6 +173,14 @@ if (defined(ohos_lite)) {
       "//third_party/bounds_checking_function:libsec_static",
       "//utils/native/base:utils",
     ]
+
+    if (enhanced_range) {
+      sources += [ "$dsoftbus_root_path/dsoftbus_enhance/adapter/common/range/softbus_adapter_range.c" ]
+      public_deps += [ "//base/msdp/algorithm/ble_range:msdp_ble_range" ]
+    } else {
+      sources += [ "$softbus_adapter_common/range/softbus_adapter_range.c" ]
+    }
+
     if (dsoftbus_feature_encrypt == 0) {
       sources += [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
       public_deps += [ "//third_party/mbedtls" ]
