Adapter proxy listener and manager Signed-off-by: samuel.shi <shixintao1@huawei.com>
Change-Id: I4e2ded2f1e29b8f85ef66604942e65cb6860c52b

--- a/core/transmission/trans_channel/trans_channel.gni
+++ b/core/transmission/trans_channel/trans_channel.gni
@@ -12,6 +12,8 @@
 # limitations under the License.
 
 import(
+    "//foundation/communication/dsoftbus/core/transmission/trans_channel/common/common.gni")
+import(
     "//foundation/communication/dsoftbus/core/transmission/trans_channel/proxy/proxy.gni")
 import(
     "//foundation/communication/dsoftbus/core/transmission/trans_channel/qos/qos.gni")
@@ -21,11 +23,14 @@ import(
     "//foundation/communication/dsoftbus/core/transmission/trans_channel/udp_negotiation/udp_negotiation.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
-trans_channel_src = trans_proxy_channel_src + trans_direct_channel_src +
-                    trans_udp_channel_src + trans_qos_src
-trans_channel_inc = trans_proxy_channel_inc + trans_direct_channel_inc +
-                    trans_udp_channel_inc + trans_qos_inc
-trans_channel_deps = trans_proxy_channel_deps + trans_qos_deps
+trans_channel_src =
+    trans_channel_common_src + trans_proxy_channel_src +
+    trans_direct_channel_src + trans_udp_channel_src + trans_qos_src
+trans_channel_inc =
+    trans_channel_common_inc + trans_proxy_channel_inc +
+    trans_direct_channel_inc + trans_udp_channel_inc + trans_qos_inc
+trans_channel_deps =
+    trans_channel_common_deps + trans_proxy_channel_deps + trans_qos_deps
 
 trans_channel_src += [
   "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
