--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -39,7 +39,23 @@ if (dsoftbus_feature_lnn_net) {
     "$core_lane_hub_path/lane_manager/src/lnn_lane_link.c",
     "$core_lane_hub_path/lane_manager/src/lnn_lane_manager.c",
     "$core_lane_hub_path/lane_manager/src/lnn_smart_communication.c",
+    "$core_lane_hub_path/lane_manager/src/lnn_lane.c",
+    "$core_lane_hub_path/lane_manager/src/lnn_lane_common.c",
+    "$core_lane_hub_path/lane_manager/src/lnn_lane_link_proc.c",
+    "$core_lane_hub_path/lane_manager/src/lnn_lane_model.c",
+    "$core_lane_hub_path/lane_manager/src/lnn_lane_select.c",
+    "$core_lane_hub_path/lane_manager/src/lnn_select_rule.c",
+    "$core_lane_hub_path/lane_manager/src/lnn_trans_lane.c",
   ]
+
+  if (enhanced) {
+    lane_src_enhance_path =
+        "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub"
+    bus_center_hub_src += [ "$lane_src_enhance_path/lane/lnn_lane_score.c" ]
+  } else {
+    bus_center_hub_src +=
+        [ "$core_lane_hub_path/lane_manager/src/lnn_lane_score_virtual.c" ]
+  }
   if (dsoftbus_feature_lnn_time_sync) {
     bus_center_hub_src +=
         [ "$core_lane_hub_path/time_sync/src/lnn_time_sync_manager.c" ]
