--- a/core/connection/common/conn_common.gni
+++ b/core/connection/common/conn_common.gni
@@ -15,6 +15,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 conn_common_src = [
   "$dsoftbus_root_path/core/connection/common/src/softbus_base_listener.c",
   "$dsoftbus_root_path/core/connection/common/src/softbus_tcp_socket.c",
+  "$dsoftbus_root_path/core/connection/common/src/softbus_socket.c",
   "$dsoftbus_root_path/core/connection/common/src/softbus_thread_pool.c",
   "$dsoftbus_root_path/core/connection/common/src/softbus_datahead_transform.c",
 ]
