--- a/tests/sdk/discovery/unittest/BUILD.gn
+++ b/tests/sdk/discovery/unittest/BUILD.gn
@@ -44,7 +44,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/interfaces/kits/discovery",
       "$dsoftbus_root_path/interfaces/kits/common",
       "$dsoftbus_root_path/sdk/discovery/include",
-      "//utils/native/base/include",
+      "//commonlibrary/c_utils/base/include",
       "//third_party/bounds_checking_function/include",
       "unittest/common/",
       "$dsoftbus_root_path/sdk/discovery/manager/include",
@@ -53,12 +53,17 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/sdk:softbus_client",
       "//third_party/bounds_checking_function:libsec_static",
       "//third_party/googletest:gtest_main",
-      "//utils/native/base:utils",
     ]
     if (is_standard_system) {
-      external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
     } else {
-      external_deps = [ "hilog:libhilog" ]
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
     }
   }
   group("unittest") {
