--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -35,7 +35,7 @@ if (defined(ohos_lite)) {
   common_include = [
     "$dsoftbus_root_path/interfaces/kits",
     "$dsoftbus_root_path/interfaces/kits/common",
-    "//utils/native/base/include",
+    "//commonlibrary/c_utils/base/include",
     "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
     "//third_party/bounds_checking_function/include",
   ]
@@ -145,7 +145,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/interfaces/kits",
       "$dsoftbus_root_path/interfaces/kits/common",
       "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
-      "//utils/native/base/include",
+      "//commonlibrary/c_utils/base/include",
       "//third_party/bounds_checking_function/include",
     ]
     sources = [
@@ -163,7 +163,6 @@ if (defined(ohos_lite)) {
     public_deps = [
       "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
       "//third_party/bounds_checking_function:libsec_static",
-      "//utils/native/base:utils",
     ]
 
     native_source_path = rebase_path("$dsoftbus_root_path")
@@ -195,6 +194,7 @@ if (defined(ohos_lite)) {
     public_configs = [ ":config_adapter_common" ]
     if (is_standard_system) {
       external_deps = [
+        "c_utils:utils",
         "hisysevent_native:libhisysevent",
         "hiviewdfx_hilog_native:libhilog",
       ]
