--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -48,10 +48,8 @@ if (defined(ohos_lite)) {
   } else {
     build_type = "ohos_static_library"
   }
-  common_client_deps += [
-    "//third_party/bounds_checking_function:libsec_shared",
-    "//utils/native/base:utils",
-  ]
+  common_client_deps +=
+      [ "//third_party/bounds_checking_function:libsec_shared" ]
 }
 
 config("dsoftbus_sdk_interface") {
@@ -87,6 +85,7 @@ target(build_type, "softbus_client") {
     cflags_cc = [ "-std=c++14" ]
     if (is_standard_system) {
       external_deps = [
+        "c_utils:utils",
         "hiviewdfx_hilog_native:libhilog",
         "ipc:ipc_single",
       ]
