--- a/tests/core/connection/br/BUILD.gn
+++ b/tests/core/connection/br/BUILD.gn
@@ -36,9 +36,11 @@ ohos_unittest("softbus_conn_br_test") {
     "//third_party/bounds_checking_function:libsec_shared",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
-    "//utils/native/base:utils",
   ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [
+    "c_utils:utils",
+    "hiviewdfx_hilog_native:libhilog",
+  ]
   sources = [ "connection_br_test.cpp" ]
 }
