--- a/tests/core/connection/tcp/BUILD.gn
+++ b/tests/core/connection/tcp/BUILD.gn
@@ -39,8 +39,10 @@ ohos_unittest("softbus_tcp_manager_test") {
     "//third_party/bounds_checking_function:libsec_shared",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
-    "//utils/native/base:utils",
   ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [
+    "c_utils:utils",
+    "hiviewdfx_hilog_native:libhilog",
+  ]
 }
