--- a/tests/core/discovery/manager/BUILD.gn
+++ b/tests/core/discovery/manager/BUILD.gn
@@ -30,7 +30,7 @@ ohos_unittest("DiscManagerTest") {
     "$dsoftbus_root_path/interfaces/kits/discovery",
     "$dsoftbus_root_path/core/discovery/manager/include",
     "$dsoftbus_root_path/core/discovery/coap/include",
-    "//utils/native/base/include",
+    "//commonlibrary/c_utils/base/include",
     "unittest/common/",
     "$dsoftbus_root_path/components/nstackx/nstackx_ctrl/interface",
   ]
@@ -39,13 +39,18 @@ ohos_unittest("DiscManagerTest") {
     "$dsoftbus_root_path/components/nstackx/nstackx_ctrl:nstackx_ctrl",
     "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/googletest:gtest_main",
-    "//utils/native/base:utils",
   ]
 
   if (is_standard_system) {
-    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+    external_deps = [
+      "c_utils:utils",
+      "hiviewdfx_hilog_native:libhilog",
+    ]
   } else {
-    external_deps = [ "hilog:libhilog" ]
+    external_deps = [
+      "c_utils:utils",
+      "hilog:libhilog",
+    ]
   }
 }
 
