--- a/tests/sdk/transmission/trans_channel/udp/file/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/file/BUILD.gn
@@ -48,11 +48,13 @@ if (defined(ohos_lite)) {
     deps = [
       "$dsoftbus_root_path/core/common:softbus_utils",
       "$dsoftbus_root_path/sdk:softbus_client",
-      "//utils/native/base:utils",
     ]
 
     if (is_standard_system) {
-      external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
       part_name = "dsoftbus"
     }
     subsystem_name = "communication"
