--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -110,7 +110,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common:softbus_utils",
         "//build/lite/config/component/cJSON:cjson_shared",
         "//foundation/communication/ipc/interfaces/innerkits/c/ipc:ipc_single",
-        "//foundation/distributedschedule/samgr_lite/samgr:samgr",
+        "//foundation/systemabilitymgr/samgr_lite/samgr:samgr",
         "//third_party/bounds_checking_function:libsec_shared",
       ]
     }
@@ -180,7 +180,7 @@ if (defined(ohos_lite)) {
         "hiviewdfx_hilog_native:libhilog",
         "ipc:ipc_core",
         "safwk:system_ability_fwk",
-        "samgr_standard:samgr_proxy",
+        "samgr:samgr_proxy",
       ]
     }
 
