--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -177,6 +177,7 @@ if (defined(ohos_lite)) {
       external_deps = bus_center_server_external_deps
       external_deps += [
         "access_token:libaccesstoken_sdk",
+        "access_token:libprivacy_sdk",
         "device_auth:deviceauth_sdk",
         "hiviewdfx_hilog_native:libhilog",
         "ipc:ipc_core",
