--- a/adapter/default_config/feature_config/mini/config.gni
+++ b/adapter/default_config/feature_config/mini/config.gni
@@ -20,6 +20,8 @@ declare_args() {
   dsoftbus_feature_conn_ble = false
   dsoftbus_feature_conn_p2p = false
 
+  dsoftbus_feature_protocol_newip = false
+
   dsoftbus_feature_trans_udp = false
   dsoftbus_feature_trans_udp_stream = false
   dsoftbus_feature_trans_udp_file = false
