--- a/core/connection/common/conn_common.gni
+++ b/core/connection/common/conn_common.gni
@@ -29,15 +29,15 @@ conn_common_inc = [
 native_source_path = rebase_path("$dsoftbus_root_path")
 newip_dir = "dsoftbus_enhance/components/newip"
 newip_enhanced = exec_script("$dsoftbus_root_path/check_sub_module.py",
-                       [
-                         "$native_source_path",
-                         "$newip_dir",
-                       ],
-                       "value")
+                             [
+                               "$native_source_path",
+                               "$newip_dir",
+                             ],
+                             "value")
 
 if (newip_enhanced) {
-  import("//foundation/communication/dsoftbus/dsoftbus_enhance/components/newip/newip.gni")
+  import(
+      "//foundation/communication/dsoftbus/dsoftbus_enhance/components/newip/newip.gni")
   conn_common_src += newip_connection_src
   conn_common_inc += newip_connection_include
 }
-
