--- a/core/bus_center/bus_center_server.gni
+++ b/core/bus_center/bus_center_server.gni
@@ -90,3 +90,20 @@ if (defined(ohos_lite)) {
   bus_center_server_deps += [ "//utils/native/base:utils" ]
   bus_center_server_external_deps = bus_center_adapter_external_deps
 }
+
+native_source_path = rebase_path("$dsoftbus_root_path")
+agcr_dir = "dsoftbus_enhance/components/agcr"
+agcr_enhanced = exec_script("$dsoftbus_root_path/check_sub_module.py",
+                            [
+                              "$native_source_path",
+                              "$agcr_dir",
+                            ],
+                            "value")
+
+if (agcr_enhanced) {
+  import(
+      "//foundation/communication/dsoftbus/dsoftbus_enhance/components/agcr/agcr.gni")
+
+  bus_center_server_src += agcr_src
+  bus_center_server_inc += agcr_inc
+}
