--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -9,6 +9,7 @@
     "services" : [{
             "name" : "softbus_server",
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
+            "caps" : ["CAP_NET_ADMIN"],
             "uid" : "dsoftbus",
             "gid" : ["dsoftbus", "system", "shell"],
             "secon" : "u:r:softbus_server:s0"
